{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 107,
  "lineage": "c67dbd0f-d24f-cf6f-6055-081d21b408b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-067a3579af5d86a12",
            "domain": "vpc",
            "id": "eipalloc-0587e6b99da01ef79",
            "instance": "i-0ee2c2d80c10e85dc",
            "network_interface": "eni-0d325243bf4795879",
            "private_dns": "ip-10-0-1-109.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-54-248-169-60.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.169.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-055d878666a3e92a3",
            "domain": "vpc",
            "id": "eipalloc-06bb34425f11a703b",
            "network_interface": "eni-05215d20956e2a17a",
            "private_dns": "ip-10-0-1-49.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-54-65-18-229.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.18.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ad9296e6cf1e3cf",
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:instance/i-0c522749db8efb2c2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c522749db8efb2c2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ap_id_rsa.pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046d00a42f52111b1",
            "private_dns": "ip-10-0-2-70.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-026ba84da7306b755",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df11a8061534b927",
            "tags": {
              "Name": "ap-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b77a625157ba0ef"
            ]
          },
          "depends_on": [
            "aws_key_pair.auth-app",
            "aws_security_group.priv-a",
            "aws_subnet.private-a",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ad9296e6cf1e3cf",
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:instance/i-0ee2c2d80c10e85dc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee2c2d80c10e85dc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d325243bf4795879",
            "private_dns": "ip-10-0-1-109.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-54-248-169-60.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.169.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b43e6e26b737274c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b934c70b6b439cd6",
            "tags": {
              "Name": "web-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0364c6d9089c8a63d"
            ]
          },
          "depends_on": [
            "aws_key_pair.auth",
            "aws_security_group.pub-a",
            "aws_subnet.public-a",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:internet-gateway/igw-0271655400c5128da",
            "id": "igw-0271655400c5128da",
            "owner_id": "507009835379",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bb34425f11a703b",
            "id": "nat-0935fc3248a21581c",
            "network_interface_id": "eni-05215d20956e2a17a",
            "private_ip": "10.0.1.49",
            "public_ip": "54.65.18.229",
            "subnet_id": "subnet-0b934c70b6b439cd6",
            "tags": {
              "Name": "ngw"
            }
          },
          "depends_on": [
            "aws_eip.ngw",
            "aws_subnet.public-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0133abaa6a449a2a7",
            "owner_id": "507009835379",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0935fc3248a21581c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-priv"
            },
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-099b78c19c59321bc",
            "owner_id": "507009835379",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0271655400c5128da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-pub"
            },
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da717c5e317e849",
            "route_table_id": "rtb-0133abaa6a449a2a7",
            "subnet_id": "subnet-0df11a8061534b927"
          },
          "depends_on": [
            "aws_route_table.private-a",
            "aws_subnet.private-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831e244eff04a7d5",
            "route_table_id": "rtb-099b78c19c59321bc",
            "subnet_id": "subnet-0b934c70b6b439cd6"
          },
          "depends_on": [
            "aws_route_table.public-a",
            "aws_subnet.public-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:security-group/sg-07b77a625157ba0ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b77a625157ba0ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_priv-a",
            "name_prefix": null,
            "owner_id": "507009835379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-priv-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:security-group/sg-0364c6d9089c8a63d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0364c6d9089c8a63d",
            "ingress": [
              {
                "cidr_blocks": [
                  "106.72.165.97/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "106.72.165.97/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_pub-a",
            "name_prefix": null,
            "owner_id": "507009835379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-pub-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:security-group/sg-06d07b121797005f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d07b121797005f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": null,
            "owner_id": "507009835379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3961692115",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d07b121797005f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-priv-a-22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4168373418",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b77a625157ba0ef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.priv-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-pub-a-22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "106.72.165.97/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2333490062",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0364c6d9089c8a63d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.pub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-pub-a-80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "106.72.165.97/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2315581909",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0364c6d9089c8a63d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.pub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-rds-3306",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-218122771",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d07b121797005f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "priv-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-637369792",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b77a625157ba0ef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.priv-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-egress-pub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2029579587",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0364c6d9089c8a63d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.pub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:subnet/subnet-05f67b1035ba38ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05f67b1035ba38ffa",
            "map_public_ip_on_launch": false,
            "owner_id": "507009835379",
            "tags": {
              "Name": "db-subnet-1a"
            },
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsub-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:subnet/subnet-08f99611525c90c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08f99611525c90c5e",
            "map_public_ip_on_launch": false,
            "owner_id": "507009835379",
            "tags": {
              "Name": "db-subnet-1c"
            },
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:subnet/subnet-0df11a8061534b927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0df11a8061534b927",
            "map_public_ip_on_launch": false,
            "owner_id": "507009835379",
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:subnet/subnet-0b934c70b6b439cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b934c70b6b439cd6",
            "map_public_ip_on_launch": false,
            "owner_id": "507009835379",
            "vpc_id": "vpc-0e239b10f8a6bfdc9"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "int",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:vpc/vpc-0eb8da74ac3286cdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0eb58cd1b70229927",
            "default_route_table_id": "rtb-0ddfe09d0f7c31732",
            "default_security_group_id": "sg-0cb75d8de6a6ac0e1",
            "dhcp_options_id": "dopt-413d7626",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eb8da74ac3286cdf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ddfe09d0f7c31732",
            "owner_id": "507009835379",
            "tags": {
              "Name": "internal-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:507009835379:vpc/vpc-0e239b10f8a6bfdc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00921f4a5816042a1",
            "default_route_table_id": "rtb-059686eb5db5b290c",
            "default_security_group_id": "sg-0268d92d7979f2a73",
            "dhcp_options_id": "dopt-413d7626",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e239b10f8a6bfdc9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059686eb5db5b290c",
            "owner_id": "507009835379",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}